2008-08-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: It's now possible to serialize an XML
	document to binary. The use of binaries seems to bring an improvement
	of 15 to 20% in speed over lists.
	(make_element/1): Fix a bug with the creation of the element; the
	namespace was filled instead of the name.

	* doc/Makefile.am: Add +B arguments to erl(1). With this, Ctrl+C will
	halt the emulator immediatly.

	* src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl: Add to_binary
	functions.

	* src/core/exmpp_jid.erl: Rename *_to_string and string_to_* functions
	to *_to_list and list_to_* respectively, for consistency's sake with
	other modules. Add functions to serialize a JID as a binary, instead
	of a list.

	* src/compat/jlib.erl, src/server/exmpp_server_binding.erl,
	src/core/exmpp_stanza.erl, src/client/exmpp_client_binding.erl,
	testsuite/jid.erl: Update to take into account exmpp_jid API changes.

	* src/server/exmpp_server_binding.erl (bind/2): Use the new
	jid_to_binary/1 function in exmpp_jid.

	* include/exmpp.hrl, include/exmpp_nss.hrl, include/exmpp_xml.hrl,
	include/exmpp_xmpp.hrl, include/Makefile.am: Split the main header in
	multiple ones.

	* testsuite/Makefile.am, testsuite/eunit_tty.erl: eunit_tty only needs
	exmpp_xml.hrl.

	* c_src/xmpp_nss.h.in, c_src/xmpp_nss.h.js, c_src/xmpp_nss.h.awk,
	c_src/Makefile.am, c_src/Makefile.win32, c_src/Makefile.unix,
	c_src/exmpp_xml_expat.c: Rename xmpp_ns.* to xmpp_nss.* for
	consistency's sake.

	* include/exmpp_xmpp.hrl: Improve guard macros. Now they can be used
	in 'if' statements as well.

	* src/core/exmpp_message.erl, src/core/exmpp_presence.erl,
	src/core/exmpp_iq.erl: Add guards to many functions.

2008-08-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Exmpp is not installed under $prefix/lib/exmpp-X.X.X
	but under $prefix/exmpp-X.X.X.

	* examples, src/Makefile.am, src/Emakefile.in,